Puntuacion y colocando Game Over cuando pierdes.

--- a/pag2.html
+++ b/pag2.html
@@ -12,8 +12,10 @@
 
 <h1></h1>
 <div id="div1">ladrillos
-  <div id="div2" onclick="mover()">Plataforma</div>
+  <div id="div2" onclick="mover()"></div>
   <div id="div3"> </div>
+  <div id="div4">Puntos: </div>
+  <div id="div5">GAME OVER </div>
 
 
 </div>
